--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
 	font-style: normal;
 	font-weight:normal;
 	font-size: 30px;
-	font-family:times n17:15 26/02/2024ew roman;
+	font-family:times new roman;
 	text-align: center;
 	margin: 5px 10px 5px 35px;
 	color:#000000
@@ -143,6 +143,11 @@ method="get">
 	<TD> rafaeeelalmeida@gmail.com </TD>
 	</TR>
 </table></center>
+<br>
+<br>
+<br>
+<br>
+<br>
 </div>
 
 
