--- a/index.html
+++ b/index.html
@@ -1,80 +1,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>*BARRAS BRAVAS DO RS*</title>
-<style type="text/css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
-
-body {
-		
-		background-image: url("https://png.pngtree.com/background/20230526/original/pngtree-green-field-inside-football-stadium-in-silhouette-under-sky-picture-image_2745416.jpg");
-		background-attachment: fixed;
-		background-size: cover; 
-
-		
-		} 
-		
-	#topo{
-	positon: a;
-	font-style: normal;
-	font-weight:normal;
-	font-size: 30px;
-	font-family: Old English Text MT;
-	text-align: center;
-	margin: 10px 40px 10px 70px; 10:22 26/02/2024
-	color:#000000 }
-	
-	
-	#torcidas{
-	position: b;
-	font-style: normal;
-	font-weight:normal;
-	font-size: 20px;
-	font-family:comic sans ms;
-	text-align: center;
-	margin: 5px 20px 5px 35px; 
-	color:#000000
-	                     }
-	
-	#formulario { 
-	position: c;
-	font-style: normal;
-	font-weight:normal;
-	font-size: 20px;
-	font-family:comic sans ms;
-	text-align: center;
-	margin: 5px 10px 5px 35px;
-	color:#000000
-	}
-
-	#assinatura { 
-	position: d;
-	font-style: normal;
-	font-weight:normal;
-	font-size: 30px;
-	font-family:times n17:15 26/02/2024ew roman;
-	text-align: center;
-	margin: 5px 10px 5px 35px;
-	color:#000000
-	}
-
-	#botao { 
-	position: e;
-	font-style: normal;
-	font-weight:normal;
-	font-size: 30px;
-	font-family:times n17:15 26/02/2024ew roman;
-	text-align: center;
-	margin: 5px 10px 5px 35px;
-	color:#000000
-	}
-
-	
-
-
-
-</style>
- 
-</head>
 
 <body>
 <div id="topo">
@@ -179,5 +107,7 @@ method="get">
 
 </body>
 </html>
+
+
 
 
