--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>*BARRAS BRAVAS DO RS*</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-
-
+	
 <body>
 <div id="topo">
 <header>
@@ -25,6 +24,7 @@
 <br> <a href="http://www.ducker.com.br/">Visite o Site da GERAL DO GRÊMIO </a><br>
 <img src="https://4.bp.blogspot.com/-yQJ3nM4rlAc/TlwkZIMdmWI/AAAAAAAAAv4/BDglYp6aTUM/s1600/geral-do-gremio_10101.jpg" width="500" height="250" alt="Geral Do Grêmio">
 </ol>
+	
 <ol>
 <b>LOUCOS DA PAPADA</b>
 <br> <a href="https://www.instagram.com/osloucosdapapada/">Visite o Site de OS LOUCOS DA PAPADA</a><br>
@@ -33,59 +33,45 @@
 </div>
 
 <div id="formulario">
-
 <h2>Formulário de Contato</h2>
-
     	<form action="processar_formulario.php" method="post">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required>
-	    <br>
-
+	<br>
+		
         <label for="email">E-mail:</label>
         <input type="email" id="email" name="email" required>
-	    <br>
+	<br>
 
         <label for="mensagem">Mensagem:</label>
         <textarea id="mensagem" name="mensagem" required></textarea>
-	    <br>
+	<br>
 
         <input type="submit" value="Enviar">
 	</form>
 	</div>
-<form name="input" action="html_form_action.asp"
-method="get">
+	
+<form name="input" action="html_form_action.asp" method="get">
 
 <br>
 <br>
 <br>
 <br>
 <br>
-
-
-
-
-
+	
 <center><img src="https://s.glbimg.com/es/ge/f/original/2017/04/06/ezgif.com-resize.gif" width="400" height="200"><br></p></center>
 <br>
 <br>
-
-
-
 	<div id="botao">
 	<button>
 		<a href="https://www.youtube.com/watch?v=Mrp-FBOZHM0&ab_channel=PELEJA" target="_blank">
 		BARRAS BRAVAS
 		</a>
 	</button>
-
-
 	<center>
 	<img src="https://loja.barrabrava.net/img/barra-brava-logo-1564925484.jpg" width="300" height="200"><br></p>
 	</center>
-
 	</div>
-
-
 
 <div id="assinatura">
 <center>
@@ -99,13 +85,10 @@ method="get">
 	<TD>Rafael Almeida</TD>
 	<TD> rafaeeelalmeida@gmail.com </TD>
 	</TR>
-</table>
-</center>
-</div>
-
-
-
-</body>
+				</table>
+			</center>
+		</div>
+	</body>
 </html>
 
 
